[gd_scene load_steps=4 format=3 uid="uid://bqes8l8rei7do"]

[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/menu/items_menu.gd" id="1_r5hci"]
[ext_resource type="PackedScene" uid="uid://c32ax83ybum6y" path="res://scenes/level_editor/assets/level_editor_menu/items/menu/item_selector/item_selector.tscn" id="2_2r2ev"]
[ext_resource type="PackedScene" uid="uid://dfprq3k47wt75" path="res://scenes/level_editor/assets/level_editor_menu/items/menu/items_settings/item_settings.tscn" id="3_wh2ot"]

[node name="ItemsMenu" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.5
offset_top = -51.0
offset_right = 369.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 10
script = ExtResource("1_r5hci")

[node name="ItemSelector" parent="." instance=ExtResource("2_2r2ev")]
layout_mode = 2

[node name="ItemSettings" parent="." instance=ExtResource("3_wh2ot")]
layout_mode = 2

[connection signal="item_selected" from="ItemSelector" to="." method="_on_item_selected"]
[connection signal="item_settings_changed" from="ItemSettings" to="." method="_on_item_settings_changed"]
[connection signal="item_settings_saved" from="ItemSettings" to="." method="_on_item_settings_saved"]
